--- a/node/webui/windows/inxExample.styl
+++ b/node/webui/windows/inxExample.styl
@@ -1,3 +1,3 @@
 inx-example, [inx-example]
-  margin: 1em
+  padding: 1em
   display: block
